--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -14,9 +14,22 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - run: pip install -r requirements.txt
-      - run: python tests/exercise.py
-      - run: python tests/utils.py
+      - run: sudo apt update && sudo apt install python3.9 python3.9-venv -y
+      - name: Create venv for python3.9
+        run: |
+          python3.9 -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+      - run: source venv/bin/activate && python tests/utils.py
+      - run: source venv/bin/activate && python tests/exercise.py
+      - name: Run safety check
+        run: |
+          source venv/bin/activate
+          which python
+          pwd
+          ls
+          safety check
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         env:
