--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - run: sudo apt update && sudo apt install python3.9 python3.9-venv -y
-      - name: Create venv for python3.9
+      - name: Initialize envrionment
         run: |
+          sudo apt update && sudo apt install python3.9 python3.9-venv -y
           python3.9 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
