refactor(main.py): fix pylint problems

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,19 @@ max-line-length = 88
 max-complexity = 10
 ignore = F405
 
+[pylint.FORMAT]
+max-line-length = 123
+good-names=p,d,i,s
+
+[pylint.'MESSAGES CONTROL']
+disable = fixme,missing-docstring,logging-fstring-interpolation
+
+[pylint.DESIGN]
+max-attributes=12
+
+[pylint.LOGGING]
+loging-format-style=fstr
+
 [yapf]
 based_on_style = pep8
 spaces_before_comment = 4
