--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 88
-max-complexity = 10
-ignore = F405
+max-complexity = 30
+ignore = F405,W504,E402
 
 [pylint.FORMAT]
 max-line-length = 123
