ci: pre-commit add mypy, wider select for flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,7 @@ based_on_style = pep8
 spaces_before_comment = 4
 split_before_logical_operator = true
 column_limit = 88
+
+[mypy]
+ignore_missing_imports = true
+exclude = tests
