--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,12 @@ repos:
     hooks:
     -   id: check-case-conflict
     -   id: check-json
+    -   id: check-yaml
     -   id: trailing-whitespace
     -   id: mixed-line-ending
-    # testing
-    -   id: check-ast  # Is it valid Python?
+    -   id: end-of-file-fixer
+
+    -   id: check-ast
     -   id: debug-statements
 
 
@@ -24,9 +26,15 @@ repos:
       args:
         - "--max-line-length=88"
         - "--max-complexity=30"
-        - "--select=E" # B,C,E,F,W,T4,B9"
+        - "--select=E,B,C,E,F,W,T4,B9"
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v3.2.0
   hooks:
-  -   id: detect-private-key
+  - id: detect-private-key
+
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: ''  # Use the sha / tag you want to point at
+  hooks:
+  - id: mypy
+    args: [--no-strict-optional,--ignore-missing-imports]
